8224957: C2 compilation fails with assert: Bad graph detected in build_loop_late

Disable walking up the dominator chain for regions with more than 2 input paths.

Reviewed-by: roland, kvn